<?xml version="1.0"?>
<package format="2">
  <name>depthai_ros_yolo</name>
  <version>0.0.0</version>
  <description>A ROS package to run YOLO spatial detection on DepthAI devices.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>vision_msgs</depend> -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>common_msgs</depend>
  <build_depend>python3-yaml</build_depend>
  <exec_depend>python3-yaml</exec_depend>

</package>
